--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
-body{
+body {
     background: #202020;
 }
+
+
 canvas {
     display: block;
 }
+
+
 #canvasBg {
-    background: #ffffff
+    background: #ffffff;
 }
-#overLapping canvas {
+
+
+#overlapping canvas {
     margin: -600px 0 0;
 }
